<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="introduction"
        app:persistent="false"
        app:selectable="false"
        app:singleLineTitle="false"
        app:title="@string/preferences_introduction" />

    <PreferenceCategory app:title="@string/preferences_location">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/location_enable"
            app:persistent="false"
            app:title="@string/preferences_location_enable" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferences_route_strip">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/route_strip_enable"
            app:title="@string/preferences_route_strip_enable" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferences_notifications">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/notifications_enable"
            app:persistent="false"
            app:title="@string/preferences_notifications_enable" />

        <Preference
            app:key="@string/notification_progress"
            app:persistent="false"
            app:title="@string/preferences_notification_progress" />

        <Preference
            app:key="@string/notification_step_in_range"
            app:persistent="false"
            app:title="@string/preferences_notification_step_in_range" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferences_clipboard">

        <SwitchPreference
            app:key="@string/clipboard_enable"
            app:defaultValue="false"
            app:title="@string/preferences_clipboard_enable" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferences_about">

        <Preference
            app:key="licenses"
            app:persistent="false"
            app:summary="@string/preferences_licenses_summary"
            app:title="@string/preferences_licenses">
            <intent
                android:targetClass="com.bannergress.overlay.LicensesActivity"
                android:targetPackage="org.openbanners.overlay" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
